cargo-features = ['named-profiles']

[package]
name = "nth_rs"
version = "0.2.1"
authors = ["alexdelorenzo <alex@alexdelorenzo.dev>"]
edition = "2018"
opt-level = 3
description = "Return or exclude the nth lines supplied from stdin as output on stdout."
license = " AGPL-3.0-only"
repository = "https://github.com/alexdelorenzo/nth_rs"
homepage = "https://alexdelorenzo.dev"
documentation = "https://github.com/alexdelorenzo/nth_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
byte_lines = "0.1.1"
#rayon = ""

[profile.release]
opt-level = 3
debug = false 
incremental = true
lto = true

[profile.dev]
opt-level = 3
incremental = true

# [profile.debug]
# opt-level = 3
